[package]
name = "lex_lua"
version = "0.1.9"
authors = ["rfm <r@robertmasen.pizza>"]
edition = "2018"
description = "A lexer for Lua"
license = "MIT"
repository = "https://github.com/FreeMasen/lex_lua"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2"
